--- a/holoul.html
+++ b/holoul.html
@@ -90,11 +90,11 @@
                         <i class="fas fa-file-signature"></i>
                     </div>
                     <div>
-                        <h4 class="font-bold text-lg leading-tight">حل واجب الاتزان الحراري الخارجي</h4>
+                        <h4 class="font-bold text-lg leading-tight">حل واجب الاتزان الحراري للفيزياء صفحة 94</h4>
                         <p class="text-emerald-50 text-sm opacity-90">مادة الفيزياء - الوحدة الثانية</p>
                     </div>
                 </div>
-                <a href="https://drive.google.com/file/d/1GqpPpwSmlEc9rnJbE9iVXBOwb4fTCSlq/view?usp=sharing" class="bg-white text-emerald-700 px-6 py-2 rounded-full font-bold text-sm hover:bg-emerald-50 transition-colors shadow-sm">
+                <a href="https://drive.google.com/file/d/1U53s2pyqFXQpS0LNRo8HbOJo_MWMIrgB/view?" target="_blank" class="bg-white text-emerald-700 px-6 py-2 rounded-full font-bold text-sm hover:bg-emerald-50 transition-colors shadow-sm">
                     عرض الحل الآن
                 </a>
             </div>
