--- a/summary.html
+++ b/summary.html
@@ -83,11 +83,11 @@
 
     <header class="max-w-7xl mx-auto px-8 pt-32 pb-8 text-center">
         <div data-aos="zoom-in">
-            <span class="bg-indigo-50 text-indigo-700 px-4 py-1.5 rounded-full text-xs font-black mb-4 inline-block border border-indigo-100 italic">
+            <span class="bg-indigo-50 text-indigo-700 px-4 py-1.5 rounded-full text-xs font-black mb-4 i-block border border-indigo-100 italic">
                شروحات مبسطة يتم تدقيقها أول بأول
             </span>
             <h1 class="text-4xl md:text-6xl font-extrabold text-slate-900 mb-6">
-                قسم <span class="gradient-text">ملخصات +</span>
+               قسم <span class="gradient-text">ملخصات +</span>
             </h1>
         </div>
     </header>
@@ -99,18 +99,18 @@
         </div>
         
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <div class="bg-slate-900 rounded-3xl p-1 shadow-xl">
+            <div class="bg-orange-500 rounded-3xl p-1 shadow-xl">
                 <div class="bg-white rounded-[20px] p-5 flex items-center justify-between">
                     <div class="flex items-center gap-4">
-                        <div class="w-14 h-14 bg-slate-100 rounded-2xl flex items-center justify-center text-slate-800 text-2xl">
-                            <i class="fas fa-wifi"></i>
+                        <div class="w-14 h-14 bg-orange-50 rounded-2xl flex items-center justify-center text-orange-500 text-2xl">
+                            <i class="fas fa-flask-vial"></i>
                         </div>
                         <div>
-                            <span class="text-[10px] font-bold text-white bg-indigo-600 px-2 py-0.5 rounded-md">التكنولوجيا</span>
-                            <h3 class="font-bold text-slate-800">ملخص الاتصالات اللاسلكية</h3>
+                            <span class="text-[10px] font-bold text-white bg-orange-600 px-2 py-0.5 rounded-md">الكيمياء</span>
+                            <h3 class="font-bold text-slate-800">الكيمياء العضوية: الكربون</h3>
                         </div>
                     </div>
-                    <a href="Wireless.pdf" class="bg-indigo-600 text-white px-5 py-2 rounded-xl text-sm font-bold hover:bg-slate-900 transition-all">تحميل</a>
+                    <a href="ChemCarbon.pdf" class="bg-orange-500 text-white px-5 py-2 rounded-xl text-sm font-bold hover:bg-slate-900 transition-all">تحميل</a>
                 </div>
             </div>
 
@@ -118,14 +118,14 @@
                 <div class="bg-white rounded-[20px] p-5 flex items-center justify-between">
                     <div class="flex items-center gap-4">
                         <div class="w-14 h-14 bg-emerald-50 rounded-2xl flex items-center justify-center text-emerald-500 text-2xl">
-                            <i class="fas fa-book-quran"></i>
+                            <i class="fas fa-hands-praying"></i>
                         </div>
                         <div>
                             <span class="text-[10px] font-bold text-white bg-emerald-600 px-2 py-0.5 rounded-md">التربية الإسلامية</span>
-                            <h3 class="font-bold text-slate-800">ملخص سورة مريم (1)</h3>
+                            <h3 class="font-bold text-slate-800">ملخص التوكل على الله</h3>
                         </div>
                     </div>
-                    <a href="Maryam.pdf" class="bg-emerald-500 text-white px-5 py-2 rounded-xl text-sm font-bold hover:bg-slate-900 transition-all">تحميل</a>
+                    <a href="Tawakul.pdf" class="bg-emerald-500 text-white px-5 py-2 rounded-xl text-sm font-bold hover:bg-slate-900 transition-all">تحميل</a>
                 </div>
             </div>
         </div>
@@ -136,8 +136,9 @@
     <section class="max-w-7xl mx-auto px-8 mb-12">
         <div class="flex overflow-x-auto pb-4 gap-3 no-scrollbar" data-aos="fade-up">
             <button class="subject-filter px-6 py-3 rounded-2xl bg-indigo-600 text-white font-bold shadow-lg whitespace-nowrap">الكل</button>
-            <button class="subject-filter px-6 py-3 rounded-2xl bg-white border border-slate-200 text-slate-600 font-bold hover:border-indigo-400 whitespace-nowrap">التكنولوجيا</button>
+            <button class="subject-filter px-6 py-3 rounded-2xl bg-white border border-slate-200 text-slate-600 font-bold hover:border-indigo-400 whitespace-nowrap">الكيمياء</button>
             <button class="subject-filter px-6 py-3 rounded-2xl bg-white border border-slate-200 text-slate-600 font-bold hover:border-indigo-400 whitespace-nowrap">التربية الإسلامية</button>
+            <button class="subject-filter px-6 py-3 rounded-2xl bg-white border border-slate-200 text-slate-600 font-bold hover:border-indigo-400 whitespace-nowrap">التكنولوجيا</button>
             <button class="subject-filter px-6 py-3 rounded-2xl bg-white border border-slate-200 text-slate-600 font-bold hover:border-indigo-400 whitespace-nowrap">اللغة العربية</button>
             <button class="subject-filter px-6 py-3 rounded-2xl bg-white border border-slate-200 text-slate-600 font-bold hover:border-indigo-400 whitespace-nowrap">اللغة الإنجليزية</button>
         </div>
@@ -146,11 +147,38 @@
     <main class="max-w-7xl mx-auto px-8 pb-24">
         <div id="summaries-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             
+            <div class="glass-card p-6 flex flex-col h-full summary-item" data-category="الكيمياء" data-aos="fade-up">
+                <div class="relative mb-6 overflow-hidden rounded-2xl aspect-video bg-orange-50 flex items-center justify-center">
+                    <i class="fas fa-atom text-5xl text-orange-200"></i>
+                    <span class="absolute top-3 right-3 bg-orange-600 text-white text-[10px] px-3 py-1 rounded-full font-bold">الكيمياء</span>
+                    <span class="absolute top-3 left-3 bg-red-500 text-white text-[10px] px-3 py-1 rounded-full font-bold new-badge">جديد</span>
+                </div>
+                <h3 class="text-xl font-bold text-slate-800 mb-2">الكيمياء العضوية: الكربون</h3>
+                <p class="text-slate-500 text-sm mb-6 flex-grow">مدخل إلى الكيمياء العضوية، خصائص ذرة الكربون، والسلاسل الهيدروكربونية بأسلوب مبسط.</p>
+                <div class="flex items-center justify-between mt-auto pt-6 border-t border-slate-100">
+                    <span class="text-xs text-slate-400 font-medium"><i class="far fa-calendar-alt ml-1"></i> 2026/02/02</span>
+                    <a href="ChemCarbon.pdf" class="bg-slate-900 text-white px-4 py-2 rounded-xl text-xs font-bold hover:bg-orange-600 transition-colors">تحميل PDF</a>
+                </div>
+            </div>
+
+            <div class="glass-card p-6 flex flex-col h-full summary-item" data-category="التربية الإسلامية" data-aos="fade-up">
+                <div class="relative mb-6 overflow-hidden rounded-2xl aspect-video bg-emerald-50 flex items-center justify-center">
+                    <i class="fas fa-heart text-5xl text-emerald-200"></i>
+                    <span class="absolute top-3 right-3 bg-emerald-600 text-white text-[10px] px-3 py-1 rounded-full font-bold">التربية الإسلامية</span>
+                    <span class="absolute top-3 left-3 bg-red-500 text-white text-[10px] px-3 py-1 rounded-full font-bold new-badge">جديد</span>
+                </div>
+                <h3 class="text-xl font-bold text-slate-800 mb-2">التوكل على الله</h3>
+                <p class="text-slate-500 text-sm mb-6 flex-grow">شرح لمفهوم التوكل، الفرق بين التوكل والتواكل، وآثار التوكل على الفرد والمجتمع.</p>
+                <div class="flex items-center justify-between mt-auto pt-6 border-t border-slate-100">
+                    <span class="text-xs text-slate-400 font-medium"><i class="far fa-calendar-alt ml-1"></i> 2026/02/02</span>
+                    <a href="Tawakul.pdf" class="bg-slate-900 text-white px-4 py-2 rounded-xl text-xs font-bold hover:bg-emerald-600 transition-colors">تحميل PDF</a>
+                </div>
+            </div>
+
             <div class="glass-card p-6 flex flex-col h-full summary-item" data-category="التكنولوجيا" data-aos="fade-up">
                 <div class="relative mb-6 overflow-hidden rounded-2xl aspect-video bg-indigo-50 flex items-center justify-center">
                     <i class="fas fa-tower-cell text-5xl text-indigo-200"></i>
                     <span class="absolute top-3 right-3 bg-slate-800 text-white text-[10px] px-3 py-1 rounded-full font-bold">التكنولوجيا</span>
-                    <span class="absolute top-3 left-3 bg-red-500 text-white text-[10px] px-3 py-1 rounded-full font-bold new-badge">جديد</span>
                 </div>
                 <h3 class="text-xl font-bold text-slate-800 mb-2">درس الاتصالات اللاسلكية</h3>
                 <p class="text-slate-500 text-sm mb-6 flex-grow">شرح شامل لأنواع الشبكات اللاسلكية، موجات الراديو، وكيفية عمل أبراج الاتصالات الحديثة.</p>
@@ -160,11 +188,10 @@
                 </div>
             </div>
 
-            <div class="glass-card p-6 flex flex-col h-full summary-item" data-category="التربية الإسلامية" data-aos="fade-up" data-aos-delay="100">
+            <div class="glass-card p-6 flex flex-col h-full summary-item" data-category="التربية الإسلامية" data-aos="fade-up">
                 <div class="relative mb-6 overflow-hidden rounded-2xl aspect-video bg-emerald-50 flex items-center justify-center">
                     <i class="fas fa-book-quran text-5xl text-emerald-200"></i>
                     <span class="absolute top-3 right-3 bg-emerald-600 text-white text-[10px] px-3 py-1 rounded-full font-bold">التربية الإسلامية</span>
-                    <span class="absolute top-3 left-3 bg-red-500 text-white text-[10px] px-3 py-1 rounded-full font-bold new-badge">جديد</span>
                 </div>
                 <h3 class="text-xl font-bold text-slate-800 mb-2">سورة مريم (1)</h3>
                 <p class="text-slate-500 text-sm mb-6 flex-grow">ملخص تفسير الآيات وتوضيح المعاني والأحكام الواردة في مطلع سورة مريم المباركة.</p>
