--- a/index.html
+++ b/index.html
@@ -280,6 +280,49 @@
     </div>
 </section>
 
+<section id="bolbol-voting" class="max-w-7xl mx-auto px-4 md:px-8 py-20" data-aos="zoom-in-up">
+    <div class="relative overflow-hidden rounded-[3.5rem] bg-gradient-to-br from-amber-400 via-orange-500 to-yellow-600 p-1 md:p-1.5 shadow-2xl shadow-orange-200">
+        
+        <div class="relative bg-white/95 backdrop-blur-md rounded-[3.3rem] px-8 py-16 md:py-24 overflow-hidden">
+            
+            <div class="absolute -top-24 -right-24 w-96 h-96 bg-amber-100 rounded-full blur-3xl opacity-50"></div>
+            <div class="absolute -bottom-24 -left-24 w-96 h-96 bg-orange-100 rounded-full blur-3xl opacity-50"></div>
+
+            <div class="relative z-10 flex flex-col items-center text-center">
+                <div class="inline-flex items-center gap-2 px-6 py-2 bg-orange-100 text-orange-700 rounded-full text-xs md:text-sm font-black mb-8 border border-orange-200 animate-bounce">
+                    <i class="fas fa-microphone-alt"></i>
+                    تعاون مشترك: اللجنة العلمية & اللجنة الإعلامية
+                </div>
+
+                <h2 class="text-4xl md:text-6xl font-black text-slate-900 mb-6 leading-tight">
+                    مسابقة <span class="text-orange-500">بلبل الإسراء</span> <br>
+                    <span class="text-2xl md:text-4xl text-slate-600">صوتكم يصنع الفرق!</span>
+                </h2>
+
+                <p class="text-slate-500 text-lg md:text-xl mb-12 max-w-2xl leading-relaxed font-medium">
+                    ندعوكم للمشاركة في اختيار أجمل التلاوات العطرة. صوتوا الآن للطفل الذي لامست قراءته قلوبكم، لنساهم معاً في تشجيع جيل القرآن.
+                </p>
+
+                <div class="flex flex-col sm:flex-row gap-6 w-full justify-center">
+                    <a href="bolbol.html" class="group relative inline-flex items-center justify-center px-12 py-6 overflow-hidden font-black text-white transition-all duration-300 bg-slate-900 rounded-[2rem] hover:bg-orange-600 hover:shadow-[0_20px_40px_rgba(249,115,22,0.3)] active:scale-95">
+                        <span class="relative flex items-center gap-4 text-xl">
+                            انتقل لصفحة التصويت
+                            <i class="fas fa-vote-yea group-hover:rotate-12 transition-transform"></i>
+                        </span>
+                    </a>
+                </div>
+
+                <p class="mt-8 text-slate-400 text-sm font-bold italic">
+                    * مخصص لأهالي وطلاب مدرسة الإسراء
+                </p>
+            </div>
+
+            <i class="fas fa-star absolute top-20 left-20 text-orange-200 text-4xl hidden md:block animate-pulse"></i>
+            <i class="fas fa-heart absolute bottom-20 right-20 text-amber-200 text-4xl hidden md:block animate-pulse delay-700"></i>
+        </div>
+    </div>
+</section>
+
 
     <section id="schedule" class="max-w-7xl mx-auto px-4 md:px-8 py-20 my-10 bg-white/50 border-y border-slate-100">
         <div class="mb-12 text-center" data-aos="fade-up">
